# connected-operations-intelligence

./: .eslintrc.cjs  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  data_dictionary.md  databricks.yml  generate_data_dictionary.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml  skills-lock.json  tsconfig.base.json
data-products/io-reporting/: README.md  data_dictionary.md  databricks.yml  pyproject.toml  schema_documentation.md
data-products/io-reporting/contracts/: app-dev-profile-template.md  app_contract_manifest.yml  app_migration_registry.yml  ioreporting-dev-deployment-profile.md  warehouse360-contract-prep.md  warehouse360-dev-profile.md  warehouse360-dev-validation-summary-template.md  warehouse360_consumption_column_contract.yml  warehouse360_view_expectations.yml
data-products/io-reporting/docs/: business_rules.md  data_contracts.md  freshness_contracts.md  handover-reconciliation-hardening.md  ingestion_requests.md  plant_onboarding_runbook.md  plant_readiness_model.md  quality_qm_functional_model.md  runbook.md  security_consumption_model.md  source_dependency_map.md
data-products/io-reporting/evidence/: README.md
data-products/io-reporting/gold/: __init__.py  _shared.py  design_spec.md  dlt_gold_pipeline.py  freshness.py  op_risk_gold.py  quality_lab.py  readiness_validation.py  risk_common.py  servicenow.py  spc_gold.py  trace_gold.py  warehouse_exceptions.py  warehouse_flow_gold.py  warehouse_inbound_gold.py  warehouse_kpi_snapshot.py  (+2 more)
(+898 files in other folders)
